add auto reload

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run scss && npm run webpack",
     "scss": "sass src/assets/scss/page:dist/assets/css --style=compressed --no-source-map",
     "watch:scss": "sass src/assets/scss/page:dist/assets/css -w --no-source-map",
-    "server": "browser-sync start --port 8000 -s dist",
+    "server": "browser-sync start --port 8000 -s dist --files \"dist/**/*.css, dist/**/*.html, dist/**/*.js\"",
     "watch:webpack": "webpack --mode development --watch",
     "webpack": "webpack --mode production"
   },
